// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressIndicator renders ProgressIndicator correctly 1`] = `
<div
  className="ms-ProgressIndicator"
>
  <div
    className="ms-ProgressIndicator-itemName"
  >
    
  </div>
  <div
    className="ms-ProgressIndicator-itemProgress"
  >
    <div
      className="ms-ProgressIndicator-progressTrack"
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={75}
      aria-valuetext={undefined}
      className="ms-ProgressIndicator-progressBar smoothTransition"
      role="progressbar"
      style={
        Object {
          "width": "75%",
        }
      }
    />
  </div>
  <div
    className="ms-ProgressIndicator-itemDescription"
  >
    
  </div>
</div>
`;

exports[`ProgressIndicator renders indeterminate ProgressIndicator correctly 1`] = `
<div
  className="ms-ProgressIndicator"
>
  <div
    className="ms-ProgressIndicator-itemName"
  >
    
  </div>
  <div
    className="ms-ProgressIndicator-itemProgress"
  >
    <div
      className="ms-ProgressIndicator-progressTrack"
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={undefined}
      aria-valuetext={undefined}
      className="ms-ProgressIndicator-progressBar"
      role="progressbar"
      style={undefined}
    />
  </div>
  <div
    className="ms-ProgressIndicator-itemDescription"
  >
    
  </div>
</div>
`;
